mcc/Test/misc/valid/hex_number.c
int main()
{
	int a = 0x1f;
	return a;
}
 