mcc/Test/misc/invalid/not_hex_number.c
int main()
{
	int a = 0x1r;
	return a;
}
 